# Pointcloud-rosbag-to-.bin

./: CMakeLists.txt  README.md  Rosbag to .bin file conversion.md  package.xml
src/: bag_to_bin.cpp
